--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@ercpereda/react-native-accordion": "^2.0.6",
     "@react-native-community/masked-view": "^0.1.10",
     "expo": "~37.0.3",
     "expo-device": "~2.1.0",
@@ -16,6 +17,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.2",
     "react-native-screens": "^2.7.0",
     "react-native-web": "~0.11.7",
